# simple-robot

./: Cargo.toml  Embed.toml  rust-toolchain.toml
.cargo/: config.toml
src/: chassis.rs  lib.rs  main.rs
