[package]
name = "simple-robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
rtt-target = "0.4.0"
panic-rtt-target ={ version = "0.1.2", features = ["cortex-m"] }
# panic-halt = "0.2.0"
embedded-hal = "0.2.7"
# embedded-hal = { version = "0.2.7", features = ["defmt"] }
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
# embassy-sync = "0.5.0"
embassy-executor = { version = "0.3.3", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 ={ version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [ "defmt", "stm32f401re", "unstable-pac", "memory-x", "time-driver-any", "exti", "embedded-sdmmc", "chrono"]  }
embedded-io = "0.6.1"
futures = { version = "0.3.29", default-features = false, features = ["async-await"] }
heapless = { version = "0.8.0", default-features = false }
nb = "1.1.0"
embedded-storage = "0.3.1"
micromath = "2.1.0"
static_cell = "2.0.0"
# defmt = "0.3.5"
defmt = { version = "0.3.5", features = ["encoding-rzcobs"] }
defmt-rtt = "0.4.0"
# panic-probe = "0.3.1"
# panic-probe = { version = "0.3.1", features = ["defmt defmt-error print-rtt rtt-target print-defmt"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
# defmt-brtt = { version = "0.1.1", default-features = false, features = ["rtt"] }

# [dependencies.stm32f4]
# version = "0.15.1"
# features = ["stm32f401", "rt"]

# [dependencies.stm32f4xx-hal]
# version = "0.18.0"
# features = ["rt", "stm32f401"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
